--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Gemstones" />
+        <meta name="keywords" content="Gemstones">
+        <meta name="description" content="Here, you will learn about different types of gemstones, where they are mined, and discover some examples of these beautiful stones" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Main page</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
-          <link rel="stylesheet" href="Main page, styles.css" />
+          <link rel="stylesheet" href="index.css" />
           <link rel="shortcut icon" href="icon-home.png" type="image/png">
           <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
           <style>
@@ -27,7 +29,7 @@
     <body>
         <!-- == Header Design == -->
          <header class="header">
-            <a href="Main page.html" class="Logo"><b>Main page</b></a>
+            <a href="index.html" class="Logo"><b>Main page</b></a>
             <input type="checkbox" id="check">
             <label for="check" class="icons">
                 <i class='bx bx-menu' id="menu-icon"></i>
