--- a/Alexandrite.html
+++ b/Alexandrite.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Alexandrite" />
+        <meta name="keywords" content="Alexandrite">
+        <meta name="description" content="This stone changes color: green in daylight, and violet or red under lamp light" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Alexandrite</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
