--- a/Emerald.html
+++ b/Emerald.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Emerald" />
+        <meta name="keywords" content="Emerald">
+        <meta name="description" content="Emerald is one of the most famous and beautiful gemstones with a bright green color. It is valued for its depth of color" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Emerald</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
