--- a/Garnet.html
+++ b/Garnet.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Garnet" />
+        <meta name="keywords" content="Garnet">
+        <meta name="description" content="Garnet is a gemstone known for its vibrant colors, ranging from red to green" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Garnet</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
