--- a/Gemstones value.html
+++ b/Gemstones value.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Gemstones" />
+        <meta name="keywords" content="Gemstones">
+        <meta name="description" content="Gemstones are valued for their rarity, beauty, hardness, clarity, and color" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Gemstones Value</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
@@ -45,7 +47,7 @@
           <section class="home" id="home">
             <div class="home-content">
                 <h1>Gemstones value</h1>
-                <h3>Gemstones are valued for their rarity, beauty, hardness, clarity, and color.</h3>
+                <h3>Gemstones are valued for their rarity, beauty, hardness, clarity, and color</h3>
             </div>
           </section>
           <!-- == Portfolio Section Design == -->
