--- a/Precious stones.html
+++ b/Precious stones.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Gemstones" />
+        <meta name="keywords" content="Precious Stones">
+        <meta name="description" content="These rare gems like diamonds and rubies are highly valuable and used in luxury jewelry" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Precious Stones</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
