--- a/Ruby.html
+++ b/Ruby.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Ruby" />
+        <meta name="keywords" content="Ruby">
+        <meta name="description" content="Ruby is one of the most valuable gemstones. Its rich red color symbolizes love, energy, and power" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Ruby</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
