--- a/Semi-precious stones.html
+++ b/Semi-precious stones.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Semi-precious stones" />
+        <meta name="keywords" content="Semi-precious stones">
+        <meta name="description" content="These rare gems like Diamonds and Rubies are highly valuable and used in luxury jewelry" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Semi-Precious stones</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
