--- a/Tanzanite.html
+++ b/Tanzanite.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Tanzanite" />
+        <meta name="keywords" content="Tanzanite">
+        <meta name="description" content="A rare blue-violet stone, found only in Tanzania" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Tanzanite</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
