--- a/Malachite.html
+++ b/Malachite.html
@@ -136,17 +136,6 @@
                 <h2 class="heading">Contact <span>Me</span></h2>
                 <p>Here you can ask or add something</p>
                 <div class="contact-content">
-                    <div class="box-telegram">
-                        <div class="line">
-                            <img src="telegram.png">
-                        </div>
-                    <div class="box info">
-                        <h3>Ivan</h3>
-                        <p>
-                            ID: Hello_there
-                        </p>
-                    </div>
-                    </div>
                     <div class="box-email">
                         <div class="line">
                             <img src="gmail.png">
@@ -154,7 +143,7 @@
                     <div class="box info">
                         <h3>Ivan</h3>
                         <p>
-                            @gmail.com
+                            ik.zharikov@gmail.com
                         </p>
                     </div>
                     </div>
