--- a/Obsidian.html
+++ b/Obsidian.html
@@ -4,7 +4,9 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Obsidian" />
+        <meta name="keywords" content="Obsidian">
+        <meta name="description" content="Black volcanic glass. It has sharp edges, so it was once used for tools" />
+        <meta name="author" content="Ivan">
         <title>Gemstones; Obsidian</title>
         <!-- Font Awesome-->
          <!-- CSS Files -->
@@ -133,17 +135,6 @@
                 <h2 class="heading">Contact <span>Me</span></h2>
                 <p>Here you can ask or add something</p>
                 <div class="contact-content">
-                    <div class="box-telegram">
-                        <div class="line">
-                            <img src="telegram.png">
-                        </div>
-                    <div class="box info">
-                        <h3>Ivan</h3>
-                        <p>
-                            ID: Hello_there
-                        </p>
-                    </div>
-                    </div>
                     <div class="box-email">
                         <div class="line">
                             <img src="gmail.png">
@@ -151,7 +142,7 @@
                     <div class="box info">
                         <h3>Ivan</h3>
                         <p>
-                            @gmail.com
+                            ik.zharikov@gmail.com
                         </p>
                     </div>
                     </div>
