--- a/Gemstones value.html
+++ b/Gemstones value.html
@@ -101,19 +101,7 @@
           <!-- == Contact Section Design == -->
           <section class="contact" id="contact">
             <h2 class="heading">Contact <span>Me</span></h2>
-            <p>Here you can ask or add something</p>
             <div class="contact-content">
-                <div class="box-telegram">
-                    <div class="line">
-                        <img src="telegram.png">
-                    </div>
-                <div class="box info">
-                    <h3>Ivan</h3>
-                    <p>
-                        ID: Hello_there
-                    </p>
-                </div>
-                </div>
                 <div class="box-email">
                     <div class="line">
                         <img src="gmail.png">
@@ -121,7 +109,7 @@
                 <div class="box info">
                     <h3>Ivan</h3>
                     <p>
-                        @gmail.com
+                        ik.zharikov@gmail.com
                     </p>
                 </div>
                 </div>
