--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div class="box info">
                         <h3>Ivan</h3>
                         <p>
-                            @gmail.com
+                            ik.zharikov@gmail.com
                         </p>
                     </div>
                     </div>
