--- a/Alexandrite.html
+++ b/Alexandrite.html
@@ -29,23 +29,45 @@
     <body>
         </div>
         <!-- == header Design == -->
-        <header class="header">
-            <a href="Alexandrite.html" class="Logo"><b>About Alexandrite</b></a>
-            <input type="checkbox" id="check">
-            <label for="check" class="icons">
-                <i class='bx bx-menu' id="menu-icon"></i>
-                <i class='bx bx-x' id="colse-icon"></i>
-            </label>
-            <nav class="navbar">
-                <ul class="links">
-                <a href="index.html" style="--i:0;"><b>Main page</b></a>
-                <a href="#Characteristics" style="--i:1;"><b>Characteristics</b></a>
-                <a href="#Info" style="--i:2;"><b>Info</b></a>
-                <a href="#Other" style="--i:3;"><b>Other</b></a>
-                <a href="#contact" style="--i:4;"><b>Contact</b></a>
-                </ul>
-            </nav>
-         </header>
+        <header class="navbar">
+            <div class="logo-menu">
+                <i class='bx bx-menu toggle-btn'></i> <!-- Default menu icon -->
+                <h2 class="logo">About Alexandrite</h2>
+            </div>
+            <ul class="list">
+                <li class="list-item">
+                    <a href="index.html">
+                        <i class='bx bxs-home'></i>
+                        <span class="link-name" style="--i:0;">Main Page</span>
+                    </a>
+                </li>
+                <li class="list-item">
+                    <a href="#Characteristics">
+                        <i class='bx bxs-food-menu'></i>
+                        <span class="link-name" style="--i:1;">Characteristics</span>
+                    </a>
+                </li>
+                <li class="list-item">
+                    <a href="#Info">
+                        <i class='bx bx-question-mark' ></i>
+                        <span class="link-name" style="--i:2;">Info</span>
+                    </a>
+                </li>
+                <li class="list-item">
+                    <a href="#Other">
+                        <i class='bx bx-menu-alt-left'></i>
+                        <span class="link-name" style="--i:3;">Other</span>
+                    </a>
+                </li>
+                <li class="list-item">
+                    <a href="#contact">
+                        <i class='bx bxs-phone-call'></i>
+                        <span class="link-name" style="--i:4;">Contact</span>
+                    </a>
+                </li>
+            </ul>
+        </header>
+        <script src="index.js"></script>
          <!-- == Home Section Design == -->
           <section class="home" id="home">
             <div class="home-content">
