--- a/Precious stones.html
+++ b/Precious stones.html
@@ -30,7 +30,7 @@
         <!-- == header Design == -->
         <header class="navbar">
             <div class="logo-menu">
-                <i class='bx bx-menu toggle-btn'></i> <!-- Default menu icon -->
+                <i class='bx bx-menu toggle-btn'></i>
                 <h2 class="logo">Precious Stones</h2>
             </div>
             <ul class="list">
