--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <!-- == Header Design == -->
         <header class="navbar">
             <div class="logo-menu">
-                <i class='bx bx-menu toggle-btn'></i> <!-- Default menu icon -->
+                <i class='bx bx-menu toggle-btn'></i>
                 <h2 class="logo">Main Page</h2>
             </div>
             <ul class="list">
@@ -64,7 +64,7 @@
          <!-- == Home Section Design == -->
           <section class="home" id="home">
             <div class="home-content">
-                <h1>Welcome to website about precious stones</h1>
+                <h1>Welcome to website about Precious Stones</h1>
                 <h3>Here, you will learn about different types of gemstones, where they are mined, and discover some examples of these beautiful stones</h3>
             </div>
           </section>
