--- a/Semi-precious stones.html
+++ b/Semi-precious stones.html
@@ -34,6 +34,7 @@
                 <h2 class="logo">Semi-Precious Stones</h2>
             </div>
             <ul class="list">
+                <hr class="nav-divider">
                 <li class="list-item">
                     <a href="index.html">
                         <i class='bx bxs-home'></i>
