--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                 <h2 class="logo">Main Page</h2>
             </div>
             <ul class="list">
+                <hr class="nav-divider">
                 <li class="list-item">
                     <a href="#Types of gemstones">
                         <i class='bx bx-list-ul'></i>
@@ -56,6 +57,14 @@
                     <a href="#contact">
                         <i class='bx bxs-phone-call'></i>
                         <span class="link-name" style="--i:3;">Contact</span>
+                    </a>
+                </li>
+                <hr class="nav-divider">
+                <h3 class="nav-subtitle">Other Pages</h3>
+                <li class="list-item">
+                    <a href="Privacy Policy.html">
+                        <i class='bx bx-file'></i>
+                        <span class="link-name" style="--i:1;">Privacy Policy</span>
                     </a>
                 </li>
             </ul>
@@ -191,7 +200,8 @@
             <!-- == Footer Section == -->
              <footer class="footer">
                 <div class="info">
-                  Materials from <a href="https://www.flaticon.com/">this</a> and <a href="https://icons8.com/icons">this</a> site</a> were used
+                  Materials from <a href="https://www.flaticon.com/">this</a> and <a href="https://icons8.com/icons">this</a> site</a> were used<br>
+                  <a href="Privacy Policy.html"><button class="footer-button">Privacy Policy</button></a>
                 </div>
                 </footer>
                 <div class="preloader">
