--- a/Mining.html
+++ b/Mining.html
@@ -34,6 +34,7 @@
                 <h2 class="logo">Mining Gemstones</h2>
             </div>
             <ul class="list">
+                <hr class="nav-divider">
                 <li class="list-item">
                     <a href="index.html">
                         <i class='bx bxs-home'></i>
