--- a/Ruby.html
+++ b/Ruby.html
@@ -35,6 +35,7 @@
                 <h2 class="logo">About Ruby</h2>
             </div>
             <ul class="list">
+                <hr class="nav-divider">
                 <li class="list-item">
                     <a href="index.html">
                         <i class='bx bxs-home'></i>
